minor changes at FileBasedDatabase